# gptchem

./: .bumpversion.cfg  .cruft.json  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  env.yml  pyproject.toml  results.json.REMOVED.git-id  setup.cfg  tox.ini
..bfg-report/2023-09-26/12-43-20/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: api.rst  conf.py  experiments.rst  index.rst  installation.rst  references.rst  usage.rst
experiments/00_no_fine_tuning/: photoswitch_classification_no_finetuning.ipynb
experiments/01_tuning_parameter_influence/: 20230109-070407_all_res.pkl  20230112-193351_all_res.pkl  compile_results.ipynb  prepare_parameter_influence_experiments.ipynb  run_parameter_influence_experiments.py
experiments/03_classification/: molclr_classifcation_res.csv  molclr_regression_res.csv
experiments/03_classification/bandgap/: nohup.out  plot_results.ipynb  run_experiments.py  run_ngram_augmented_experiments.py  run_ngram_baseline.py
experiments/03_classification/cv/: crabnet.ipynb  nohup.out  plot_results.ipynb  run_crabnet.py  run_crabnet.sh  run_experiments.py  run_experiments_composiition.py  run_ngram_augmented.py  run_ngram_baseline.py
experiments/03_classification/freesolv/: nohup.out  plot_results.ipynb  run_experiments.py  run_ngram_baseline.py
experiments/03_classification/hea_phase/: plot_results.ipynb  run_experiments.py
experiments/03_classification/hea_single_vs_multiphase/: automatminer.ipynb  dl-baseline.ipynb  explore.ipynb  plot_results.ipynb  rule_baseline.ipynb  run_automatminer_baseline.py  run_crabnet.py  run_crabnet.sh  run_experiments.py  run_ngram_augmented_model.py  run_ngram_baseline.py
experiments/03_classification/henry/: debug_tabpfn.ipynb  nohup.out  plot_results.ipynb  run_experiments.py
experiments/03_classification/lipophilicity/: nohup.out  plot_results.ipynb  run_experiments.py  run_ngram_baseline.py
experiments/03_classification/matbench/: glass.pkl  is_metal.pkl  mb.pkl  plot_result.ipynb  prepare.ipynb
experiments/03_classification/mof_solvent/: BAN_solvents_20230126.csv  balasz.ipynb  nohup.out  run_experiments.ipynb  run_experiments.py
experiments/03_classification/mof_water_stability/: develop.ipynb  plot_results.ipynb  run_experiment.py
experiments/03_classification/opv/: nohup.out  plot_results.ipynb  run_experiments.py  run_ngram_baseline.py  try_opv_classification.ipynb
experiments/06_prompt_structure/: plot_res.ipynb
experiments/09_invalid_prompts/: test_invalid_prompts.ipynb
experiments/10_functional_groups/: explore.ipynb  plots_res.ipynb  run_experiments.py
experiments/11_few_shot_gpt4/: compile_results.ipynb  run_experiments.py  try_anthropic.py  try_cohere.ipynb  try_gpt4.ipynb
experiments/12_multirep_classifier/: first_experiment.ipynb  load_results.ipynb  run_experiment.py
experiments/12_n_gram_baseline/: test.ipynb
experiments/13_gpt_ngram/: initial_test.ipynb
experiments/14_data_on_the_internet/: load_results.ipynb  run_experiment.py  search_results.csv  test.ipynb  test_model.ipynb
experiments/15_tune_gpt_35_turbo/: run_experiments.py
experiments/16_biased_inverse_design/: bias_inverse_design.ipynb
src/gptchem/: __init__.py  cli.py  data.py  evaluator.py  experimentor.py  extractor.py  formatter.py  generator.py  gpt_classifier.py  gpt_inverse_designer.py  gpt_regressor.py  kevin.mplstyle  plotsettings.py  plotutils.py  querier.py  representation.py  settings.py  tuner.py  types.py  utils.py  version.py
src/gptchem/baselines/: cv.py  (+17 more)
tests/: __init__.py  conftest.py  test_data.py  test_evaluator.py  test_extractor.py  test_formatter.py  test_gpt_classifier.py  test_gpt_regressor.py  test_querier.py  test_representation.py  test_tuner.py  test_version.py
tests/baselines/: test_balasz.py  test_bandgap_baselines.py  test_cv.py  test_freesolv.py  test_henry.py  test_opv_baseline.py  test_polymer_baseline.py  test_rxn.py  test_solubility_baseline.py  test_waterstability.py
tests/test_files/: photoswitches.csv  prompts.csv
(+16037 files in other folders)
