##########################
# Setup.py Configuration #
##########################
[metadata]
name = gptchem
version = 0.0.2-dev
description = Use GPT-3 to solve chemistry problems
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/gptchem
download_url = https://github.com/kjappelbaum/gptchem/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/gptchem/issues
    Source Code = https://github.com/kjappelbaum/gptchem

# Author information
author = Kevin M. Jablonka
author_email = mail@kjablonka.com
maintainer = Kevin M. Jablonka
maintainer_email = mail@kjablonka.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    # TODO add your own free-text keywords

[options]
install_requires =
    loguru
    openai 
    fire
    fastcore
    typing_extensions
    scikit-learn
    pystow
    pandas
    selfies
    rdkit
    tenacity


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    furo
    sphinx-autodoc-typehints
    sphinx_automodapi
    sphinx_copybutton
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext
experiments = 
    colorcet 
    SciencePlots
    pycm
    xgboost
eval = 
    fcd
    pubchempy
    pycm
    submitit
    guacamol
    strsimpy
    diskcache

[options.entry_points]
console_scripts =
    gptchem = gptchem.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = gptchem
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/gptchem
    .tox/*/lib/python*/site-packages/gptchem

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == __main__:
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # pickle
    S301 
    # pickle
    S403 
    S404
    S603
    # Line break before binary operator (flake8 is wrong)
    W503 
    # whitespace before ':'
    E203  
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    gptchem
    test
